public/stylesheets/home.css
/* --------------------- HEADER ------------------- */

#home .header-intro .main-title span {
  line-height: 3.5rem;
  padding: 10px 24px;
  background: #ffffff;
}

@media screen and (max-width: 500px) {
  #home .header-intro .main-title {
    padding: 10px 12px;
  }
  #home .header-intro .main-title span {
    padding: 5px 0;
    box-shadow: 0.5em 0 0 #ffffff, -0.5em 0 0 #ffffff;
  }
}

/* @media (min-width: 1600px) {
  #home .header-intro .main-title span {
    padding: 24px;
  }
} */

#home .header-intro .main-title h1 {
  align-self: center;
  color: #131e1e;
  font-size: 3rem; /* still need to specify the font-size because otherwise it does not overide h1's default font size */
}

@media screen and (max-width: 500px) {
  #home .header-intro .main-title h1 {
    font-size: 1.75rem;
  }
}

#home .header-intro .main-title h1 a:active {
  color: #fc7753;
}

#home .header-intro p {
  padding-top: 75px;
  color: #ffffff;
  width: 100%;
}

@media (min-width: 780px) {
  #home .header-intro p {
    width: 85%;
  }
}

.main-title a {
  text-decoration: none;
  color: #131e1e;
}

.main-title a:hover {
  font-style: italic;
}

.main-title a:active {
  color: #fc7753;
}
/* -------------------------- DISCOVER -------------------------- */

.discover {
  min-height: 100vh;
  background: #f5f5f5;
  display: flex;
  flex-wrap: wrap;
  padding: 0;
}

.left,
.right {
  width: 50%;
}

.left {
  border-right: 1px solid #b8b8b9;
  padding: 64px 100px;
}

@media screen and (max-width: 500px) {
  .left {
    width: 100%;
    padding: 30px 12px;
  }

  .right {
    width: 100%;
  }
}

.inline-list {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  list-style: none;
  margin: 0 0 12px 0;
}

@media screen and (max-width: 500px) {
  .inline-list {
    font-size: 0.875rem;
  }
}

.right-main h2 {
  padding-bottom: 100px;
}

@media screen and (max-width: 500px) {
  .right-main {
    margin-top: 100px;
  }
}

.inline-list > li:not(:last-child)::after {
  content: "|";
  margin: 0 0.5em;
}

.right {
  color: #131e1e;
}

.right-bottom,
.right-top {
  padding: 64px;
  height: 50%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

@media screen and (max-width: 500px) {
  .right-bottom,
  .right-top {
    padding: 64px 12px;
    height: 80vh;
  }

  .right-top {
    background: #131e1e;
    color: #ffffff;
  }

  .right-bottom {
    background: #fc7753;
    color: #ffffff;
  }
}

.right-top:hover {
  background: #131e1e;
}

.right-bottom:hover {
  background: #fc7753;
}

.right-top:hover,
.right-top:hover a {
  color: white;
}

.right-bottom:hover,
.right-bottom:hover a {
  color: white;
}

.right-bottom {
  border-top: 1px solid #b8b8b9;
}

.right h2 {
  width: 100%;
  font-size: 2.25rem;
  line-height: 2.5rem;
}

@media screen and (max-width: 500px) {
  .right h2 {
    font-size: 1.625rem;
    line-height: 2rem;
  }
}

.right-footer {
  align-self: flex-end;
}

@media screen and (max-width: 500px) {
  .right-footer {
    align-self: flex-start;
  }
}

.right-footer h3 {
  line-height: 1rem;
  letter-spacing: 0.5px;
  text-transform: uppercase;
}

.right-footer a {
  text-decoration: none;
  color: #131e1e;
}

@media screen and (max-width: 500px) {
  .right-footer a {
    color: #ffffff;
    font-size: 0.875rem;
  }
}

.right-top:hover .right-footer h3:before {
  border-top: 3px solid white;
}

.right-bottom:hover .right-footer h3:before {
  border-top: 3px solid white;
}

/* -------------------------- CLIENTS -------------------------- */

.grid {
  margin: 8% 0;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-auto-rows: minmax(20vh, auto);
  border-top: 1px solid #adadad;
  border-left: 1px solid #adadad;
}

.img-cell {
  display: flex;
  align-items: center;
  justify-content: center;
  border-bottom: 1px solid #adadad;
  border-right: 1px solid #adadad;
}

.img-cell img {
  min-width: 40%;
}

/* --------------------- TESTIMONIES ----------------------- */

.testimonies {
  background: #131e1e;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
}

.slides {
  min-height: 300px;
  grid-column: 2/12;
  box-sizing: border-box;
  flex-direction: column;
  justify-content: center;
}

@media screen and (min-height: 900px) {
  .slides {
    min-height: 400px;
  }
}

.slides p {
  font-family: Traulha;
  font-style: italic;
  font-weight: normal;
  font-size: 1.75rem;
  line-height: 2.5rem;
  text-align: center;
  color: #ffffff;
}

.slides footer {
  padding: 40px 0;
  text-align: center;
  letter-spacing: 0.5px;
  text-transform: uppercase;
  color: #ffffff;
}

/* Slider */

.dots {
  grid-column: 2/12;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 30px 0;
}

.dot {
  height: 10px;
  width: 10px;
  margin: 0 8px;
  background-color: #adadad;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active {
  background-color: #ffffff;
}

